create a entry point for the application

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1>Hello</h1>
+    <p>Here is a first paragraph of our web application! The code here will be replaced by actual homepage</p>
 </body>
 </html>
