--- a/react/public/index.html
+++ b/react/public/index.html
@@ -38,7 +38,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <main>
+      <div id="root">
+      </div>
+    </main>
+    <footer>
+      <h1>Gym</h1>
+      </footer>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
