fix color contrast issue

--- a/react/public/index.html
+++ b/react/public/index.html
@@ -40,11 +40,12 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <main>
       <div id="root">
+        <h1>Gym</h1>
       </div>
     </main>
-    <footer>
+    <!-- <footer>
       <h1>Gym</h1>
-      </footer>
+      </footer> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
